Adding the option to set different anchors to differents articles:
<a href="#" data-article='#search' class="button onright red" data-icon="trash">&nbsp;Clear</a>
<a href="#" data-article='#historic' class="button onright orange" data-icon="points">&nbsp;More</a>

'data-article' is the attribute where we can relate an anchor with a
article. Those without this attribute will be common between all the
articles.

--- a/src/stylesheets/layout.css
+++ b/src/stylesheets/layout.css
@@ -57,6 +57,18 @@ header .title, footer .title {
 	font-size: 1.1em;
 	}
 
+section header a {
+    z-index: 0;
+    opacity: 0;
+    display: none!important;
+}
+
+section header a.current {
+    z-index: 1;
+    opacity: 1;
+    display: inline!important;
+}
+
 section header a.button, section footer a.button{
 	margin: 2px 2px auto;
 	}
