Issue #4 Fixed: Calendar icon doesn't work

--- a/src/stylesheets/widgets.css
+++ b/src/stylesheets/widgets.css
@@ -399,4 +399,4 @@ article.info details span {
 	font-style: normal;
 }
 
-.icon.calendar:before { content: '\\'; }
+.icon.calendar::before { content: '\\'; }
