Stylesheets converted to LESS style

--- a/src/stylesheets/less/Lungo.base.less
+++ b/src/stylesheets/less/Lungo.base.less
@@ -1,4 +1,3 @@
-/* ---- HTML5 Reset ---- */
 a,
 abbr,
 address,
@@ -71,16 +70,18 @@ video {
 	margin: 0;
 	outline: 0;
 	padding: 0;
-	font-size: 100%;}
+	font-size: 100%;
+}
 
-a{
+a {
 	color: #fff;
-	text-decoration: none;
-	
-	-webkit-tap-highlight-color: rgba(0,0,0,0);}
+	text-decoration: none;	
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+}
 
-a:hover{
-	opacity: 1;}
+a:hover {
+	opacity: 1;
+}
 
 html { 
 	height: 100%;
@@ -101,31 +102,36 @@ body {
     
     font-family: Helvetica, Arial, sans-serif;
 	font-size: 13px; 
-	line-height: 1.231;}
+	line-height: 1.231;
+}
 
 b,
 strong {
-	font-weight: bold;}
+	font-weight: bold;
+}
 
 img {
 	border: 0; 
 	-ms-interpolation-mode: bicubic; 
 	vertical-align: middle;
 	
-	font-size: 0;}
+	font-size: 0;
+}
 
 table {
 	border-collapse: collapse;
-	border-spacing: 0;}
+	border-spacing: 0;
+}
 
 th,
 td,
 caption {
-	font-weight: normal;
 	vertical-align: top;
-	text-align: left;}
+	font-weight: normal;
+	text-align: left;
+}
 
 * {
     margin: 0;
-    padding: 0;}
-
+    padding: 0;
+}
