--- a/src/stylesheets/less/Lungo.widgets.beta.less
+++ b/src/stylesheets/less/Lungo.widgets.beta.less
@@ -1,6 +1,11 @@
-
-
-/* ---- BETA's ----*/
+/** 
+ * Stylesheet
+ * 
+ * @namespace LUNGO.Widgets
+ * @class Beta
+ *
+ * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
+ */
 
 /* @group .counter (BETA) */
 .counter{
