--- a/src/stylesheets/less/Lungo.widgets.button.less
+++ b/src/stylesheets/less/Lungo.widgets.button.less
@@ -1,3 +1,12 @@
+/** 
+ * Stylesheet
+ * 
+ * @namespace LUNGO.Widgets
+ * @class Button
+ *
+ * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
+ */
+ 
 @import "mixins.less";
 
 a.button {
