--- a/src/stylesheets/less/Lungo.base.less
+++ b/src/stylesheets/less/Lungo.base.less
@@ -1,3 +1,12 @@
+/** 
+ * Stylesheet
+ * 
+ * @namespace LUNGO
+ * @class Base
+ *
+ * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
+ */
+
 a,
 abbr,
 address,
