--- a/src/stylesheets/less/Lungo.layout.list.less
+++ b/src/stylesheets/less/Lungo.layout.list.less
@@ -1,3 +1,12 @@
+/** 
+ * Stylesheet
+ * 
+ * @namespace LUNGO.Layout
+ * @class List
+ *
+ * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
+ */
+ 
 .list li:not(.toolbar) {
 	padding: 8px 6px;
 	list-style-type: none;
