--- a/src/stylesheets/less/Lungo.theme.default.less
+++ b/src/stylesheets/less/Lungo.theme.default.less
@@ -1,3 +1,12 @@
+/** 
+ * Stylesheet
+ * 
+ * @namespace LUNGO.Theme
+ * @class Default
+ *
+ * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
+ */
+
 @import "mixins.less";
 
 /* @group layout */
