--- a/src/stylesheets/less/Lungo.widgets.colour.less
+++ b/src/stylesheets/less/Lungo.widgets.colour.less
@@ -1,3 +1,12 @@
+/** 
+ * Stylesheet
+ * 
+ * @namespace LUNGO.Widgets
+ * @class Colour
+ *
+ * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
+ */
+ 
 a.grey, .grey{background-color: #ccc;}
 a.grey:active{background-color: #b5b5b5;}
 a.red, .red{background-color: #e33100;}
