--- a/src/stylesheets/less/Lungo.widgets.form.less
+++ b/src/stylesheets/less/Lungo.widgets.form.less
@@ -1,3 +1,12 @@
+/** 
+ * Stylesheet
+ * 
+ * @namespace LUNGO.Widgets
+ * @class Form
+ *
+ * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
+ */
+
 @import "mixins.less";
 
 .form, form { 
