--- a/src/stylesheets/less/Lungo.widgets.splash.less
+++ b/src/stylesheets/less/Lungo.widgets.splash.less
@@ -1,3 +1,12 @@
+/** 
+ * Stylesheet
+ * 
+ * @namespace LUNGO.Widgets
+ * @class Splash
+ *
+ * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
+ */
+ 
 .splash article { 
 	height: 100%;
 	text-align: center;
