Assign copyright in stylesheets

--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -1,3 +1,11 @@
+/** 
+ * Stylesheet
+ * 
+ * @namespace LUNGO.Theme
+ * @class Default
+ *
+ * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
+ */
 /* @group layout */
 .app {
   font-size: 13px;
