--- a/src/stylesheets/less/Lungo.widgets.less
+++ b/src/stylesheets/less/Lungo.widgets.less
@@ -29,6 +29,10 @@ section.copyright img{
 }
 
 /* @group .classes */
+.scroll {
+  	overflow: scroll;
+  	-webkit-overflow-scrolling: touch;
+}
 .hidden { 
 	display: none; }
 .onleft { 
