Stylesheet .articblue renamed to .arcticblue
Thanks eatfrog

--- a/src/stylesheets/less/Lungo.widgets.colour.less
+++ b/src/stylesheets/less/Lungo.widgets.colour.less
@@ -17,8 +17,8 @@ a.green, .green{background-color: #009600;}
 a.green:active{background-color: #00770e;}
 a.blue, .blue{background-color: #237fd7;}
 a.blue:active{background-color: #1a69b6;}
-a.articblue, .articblue{background-color: #2daebf;}
-a.articblue:active{background-color: #238e9e;}
+a.arcticblue, .arcticblue{background-color: #2daebf;}
+a.arcticblue:active{background-color: #238e9e;}
 a.orange, .orange{background-color: #ff5c00;}
 a.orange:active{background-color: #da4e15;}
 a.purple, .purple{background-color: #7b658d;}
