--- a/src/stylesheets/less/Lungo.layout.less
+++ b/src/stylesheets/less/Lungo.layout.less
@@ -10,12 +10,15 @@
 @import "mixins.less";
 
 /* @group <section> */
-section  {
+body {
+	height: 100%;
+}
+
+section{
 	position: absolute;
 	position: fixed;
-	width: 100%; 
-	height: 100%;
-	overflow: hidden;
+	width: 100%;
+	height: inherit;
 	z-index: 0;
 	-webkit-backface-visibility: hidden;
 	.transform(translate3d(100%, 0, 0));
@@ -50,6 +53,7 @@ section.popup.show  {
 section.popup.hide  {
 	.transform(translate3d(0, -100%, 0));
 }
+
 /* @end */
 
 
