--- a/src/stylesheets/less/Lungo.widgets.button.less
+++ b/src/stylesheets/less/Lungo.widgets.button.less
@@ -11,23 +11,20 @@
 
 a.button {
 	display: inline-block;
-	height: 35px;
-	padding: 0 9px;
+	height: 31px;
+	padding: 0 9px 0 8px;
 	color: white;
 	outline: none;
 	.user-select(none);
-	.border-radius(2px);
+	.border-radius(3px);
 	/* @ToDo >> mixins.less */
 	background: #666 -webkit-gradient(linear,left top,left bottom,color-stop(.2, rgba(255,255,255,0.25)),color-stop(1, rgba(255,255,255,0)));
-	background: #666 -moz-linear-gradient(center top,rgba(255,255,255,0.25) 20%,rgba(255,255,255,0) 100%);
 	-webkit-box-shadow: inset 0 1px 0 rgba(34,57,100,0.6), inset 1px 0 0 rgba(34,57,100,0.4), inset -1px 0 0 rgba(34,57,100,0.5), inset 0 -1px 0 rgba(34,57,100,0.6),inset 0 2px 0 rgba(255,255,255,.3),inset 0 0 4px rgba(255,255,255,.3),0 1px 2px rgba(0,0,0,.29);
-	-webkit-box-shadow: inset 0 1px 0 rgba(34, 57, 100, 0.6) inset 1px 0 0 rgba(34, 57, 100, 0.4) inset -1px 0 0 rgba(34, 57, 100, 0.5) inset 0 -1px 0 rgba(34, 57, 100, 0.6) inset 0 2px 0 rgba(255, 255, 255, 0.3) inset 0 0 4px rgba(255, 255, 255, 0.3) 0 1px 2px rgba(0, 0, 0, 0.29);
-	-moz-box-shadow: inset 0 1px 0 rgba(34,57,100,0.6), inset 1px 0 0 rgba(34,57,100,0.4), inset -1px 0 0 rgba(34,57,100,0.5), inset 0 -1px 0 rgba(34,57,100,0.6),inset 0 2px 0 rgba(255,255,255,.3),inset 0 0 4px rgba(255,255,255,.3),0 1px 2px rgba(0,0,0,.29);
 	box-shadow: inset 0 1px 0 rgba(34,57,100,0.6), inset 1px 0 0 rgba(34,57,100,0.4), inset -1px 0 0 rgba(34,57,100,0.5), inset 0 -1px 0 rgba(34,57,100,0.6),inset 0 2px 0 rgba(255,255,255,.3),inset 0 0 4px rgba(255,255,255,.3),0 1px 2px rgba(0,0,0,.29);
 		
 	font-size: 1.0em;
 	font-weight: bold;
-	line-height:36px;
+	line-height: 32px;
 	text-align: center; 
 	text-shadow: 0 -1px 0 rgba(0,0,0,.3); 
 	text-decoration: none;
@@ -40,8 +37,8 @@ a.button:active {
 }
 
 /* @group .button */
-a.button{background-color: #146d4a;}
-a.button:active{background-color: #189462;}
+a.button{background-color: #1d563f;}
+a.button:active{background-color: rgba(0,0,0,0.5);}
 /* @end */
   
 a.button:disabled, a.button.disabled {
@@ -58,7 +55,7 @@ a.button .icon{
 	
 	font-size: 1.5em; 
 	font-weight: normal;
-	line-height: 36px;}
+	line-height: 32px;}
 	
 a.button.big { 
 	position: relative; 
@@ -67,12 +64,13 @@ a.button.big {
 	margin-bottom: 4px;
 	padding: 6px 0;
 	font-size: 16px;
-	line-height: 30px;
+	line-height: 31px;
 }
 	
 a.button.big .icon {	
 	width: 20px;
-	line-height: 30px;
-	margin-left: 0.8em; 
+	height: 28px;
+	line-height: 32px;
+	margin-left: 0.6em; 
 	margin-right: -48px;
 }
