--- a/src/stylesheets/less/Lungo.layout.less
+++ b/src/stylesheets/less/Lungo.layout.less
@@ -136,18 +136,28 @@ nav a.current {
 /* @end */
 
 /* @group <aside> */
-[data-target="aside"]{
-	display: none !important;
-}
-
 aside {
 	position: absolute;
 	top: 0px; 
 	bottom: 0px;
-	width: 256px;
 	height: auto;
-	/* @ToDo */
+	width: 0px;	
+}
+	aside.show {
+		width: 256px;
+	}
+	
+header ~ aside {
 	padding-top: 40px;
+}
+
+header ~ aside {
+	padding-bottom: 40px;
+}
+	
+aside ~ article{
+	-webkit-transition: left 0.3s ease-in-out;
+	left: 0px;
 }
 
 aside a{
@@ -161,32 +171,28 @@ aside a{
 	line-height: 40px;
 }
 
-aside a .icon {
-	width: 28px;
-	height: 28px;
-	float: left;
-	margin: 8px 6px 0 0;
-    
-    font-size: 1.9em;
-    line-height: 1.0em;
-    text-align: center;
-}
-
-@media handheld, only screen and (max-width: 768px) {
-	article {
-    	-webkit-transition: left 0.3s ease-in-out;
+	aside a .icon {
+		width: 28px;
+		height: 28px;
+		float: left;
+		margin: 8px 6px 0 0;
+	    
+	    font-size: 1.9em;
+	    line-height: 1.0em;
+	    text-align: center;
 	}
-	
-	[data-target="aside"]{
-		display: inline !important;
+
+@media handheld, only screen and (min-width: 768px) {
+	[data-target="aside"] {
+		display: none !important;
 	}
 	
 	aside {
-    	width: 0px;
+		width: 256px;
 	}
-
-	aside.show {
-	    width: 256px;
+	
+	aside ~ article{
+    	left: 256px;
 	}
 }
 /* @end */
