--- a/release/lungo.theme.default.css
+++ b/release/lungo.theme.default.css
@@ -12,11 +12,19 @@
  *                                 |  $$$$$$/
  *                                  \______/
  *
+ * @copyright 2011 TapQuo Inc (c)
+ * @license   http://www.github.com/tapquo/lungo/blob/master/LICENSE.txt
+ * @version   1.0.3
+ * @link      https://github.com/TapQuo/Lungo.js
+ *
+ * Stylesheet
+ *
  * @namespace LUNGO.Theme
  * @class Default
  *
- * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
+ * @author   Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
+
 /* @group layout */
 .app {
   font-size: 13px;
