--- a/src/stylesheets/less/Lungo.layout.less
+++ b/src/stylesheets/less/Lungo.layout.less
@@ -22,6 +22,8 @@ section{
 	z-index: 0;
 	-webkit-backface-visibility: hidden;
 	.transform(translate3d(100%, 0, 0));
+	
+	-webkit-transition: -webkit-transform 0.3s ease-in-out;
 }
 
 section:first-child  {
@@ -208,11 +210,19 @@ article {
 	z-index: 0;
 	opacity: 0;
 }
+	
+	header ~ article {
+		top: 40px;
+	}
+	
+	footer ~ article {
+		bottom: 40px;
+	}
 
-article.current {
-	z-index: 1;
-	opacity: 1;
-}
+	article.current {
+		z-index: 1;
+		opacity: 1;
+	}
 
 .toolbar{
 	height:48px;
