--- a/src/stylesheets/less/Lungo.layout.less
+++ b/src/stylesheets/less/Lungo.layout.less
@@ -223,6 +223,50 @@ article {
 		z-index: 1;
 		opacity: 1;
 	}
+	
+	article.aside {
+	    left: 256px !important;
+	}
+	
+	article.indented {
+		background-color: #e2e2e2;
+	}
+		.indented ul, .indented form {
+			margin: 10px;
+			.border-radius(4px);
+			border: 1px solid #c5c5c5;
+			box-shadow: 0px 0px 8px #ccc;
+		}
+		
+		.indented li:first-child {
+			border-top-left-radius: 4px;
+			border-top-right-radius: 4px;
+		}
+		
+		.indented li:last-child {
+			border-bottom-left-radius: 4px;
+			border-bottom-right-radius: 4px;
+		}
+		
+		.list .contrasted {
+			background-color: #f4f4f4 !important;
+			box-shadow: inset 0px 1px 0px #fff;
+		}
+		
+		.list .toolbar a {
+			box-shadow: 1px 0px 0px #d9d9d9 ;
+		}
+		
+		.list .toolbar a:last-child {
+			box-shadow: none;
+		}
+		
+		.list .toolbar a.current {
+			color: #419ad9;
+		}
+/* @end */
+
+
 
 .toolbar{
 	height:48px;
@@ -235,8 +279,3 @@ article {
 	padding:0;
 	font-size:2.0em;
 }
-
-article.aside {
-    left: 256px !important;
-}
-/* @end */
