Force {color: white} for buttons

--- a/src/stylesheets/less/Lungo.widgets.button.less
+++ b/src/stylesheets/less/Lungo.widgets.button.less
@@ -13,7 +13,7 @@ a.button {
 	display: inline-block;
 	height: 31px;
 	padding: 0 9px 0 8px;
-	color: white;
+	color: #fff !important;
 	outline: none;
 	.user-select(none);
 	.border-radius(3px);
