--- a/src/stylesheets/less/Lungo.widgets.button.less
+++ b/src/stylesheets/less/Lungo.widgets.button.less
@@ -23,7 +23,7 @@ a.button {
 	box-shadow: inset 0 1px 0 rgba(34,57,100,0.6), inset 1px 0 0 rgba(34,57,100,0.4), inset -1px 0 0 rgba(34,57,100,0.5), inset 0 -1px 0 rgba(34,57,100,0.6),inset 0 2px 0 rgba(255,255,255,.3),inset 0 0 4px rgba(255,255,255,.3),0 1px 2px rgba(0,0,0,.29);
 		
 	font-size: 1.0em;
-	font-weight: bold;
+	font-weight: bold !important;
 	line-height: 32px;
 	text-align: center; 
 	text-shadow: 0 -1px 0 rgba(0,0,0,.3); 
