New .bubble class

--- a/src/stylesheets/less/Lungo.widgets.less
+++ b/src/stylesheets/less/Lungo.widgets.less
@@ -41,7 +41,7 @@ section.copyright img{
 	float: right;}
 .framed{
 	border: 2px solid #fff;}
-.rounded{
+.round{
 	.border-radius(4px);}
 .semi-opacity{
 	opacity: 0.5;
@@ -50,3 +50,13 @@ section.copyright img{
 	margin-top: 4px;
 }
 /* @end */
+
+
+
+.bubble {
+	padding: 3px 4px;
+	.border-radius(2px);		
+	font-size: 0.8em;
+	font-weight: bold;		
+	line-height: 1.0em;
+}
